--- a/TcpUdpTool/App.xaml
+++ b/TcpUdpTool/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:TcpUdpTool"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Icons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
