--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -112,37 +112,72 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                     <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <Label Grid.Column="0"
+                <TextBlock Grid.Column="0"
                        Grid.Row="0"
-                       Content="Message:"
                        Margin="10"
                        Padding="0"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center">
+
+                    <TextBlock.Style>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Text" Value="Message:" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Send.FileSelected}" Value="true">
+                                    <Setter Property="Text" Value="File:" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
 
                 <TextBox Grid.Column="1"
                          Grid.Row="0"
                          MinHeight="21"
                          MaxHeight="50"
+                         Margin="0 0 10 0"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
                          AcceptsReturn="True"
                          ScrollViewer.VerticalScrollBarVisibility="Auto"
-                         Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" />
+                         Text="{Binding Send.Message, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Button Grid.Column="2"
                         Grid.Row="0"
                         Height="21"
                         Width="80"
-                        Margin="10"
+                        Margin="0 10 10 10"
+                        Content="Browse"
+                        VerticalContentAlignment="Center"
+                        IsEnabled="{Binding IsConnected}"
+                        Command="{Binding Send.BrowseCommand}">
+
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Send.FileSelected}" Value="true">
+                                    <Setter Property="Visibility" Value="Visible" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+                        
+                <Button Grid.Column="3"
+                        Grid.Row="0"
+                        Height="21"
+                        Width="80"
+                        Margin="0 10 10 10"
                         Content="Send"
                         VerticalContentAlignment="Center"
-                        Command="{Binding SendCommand}"
+                        Command="{Binding Send.SendCommand}"
                         IsEnabled="{Binding IsConnected}" />
 
                 <Label Grid.Column="0"
@@ -161,13 +196,18 @@
 
                     <RadioButton Content="Text"
                                  Margin="0 0 10 0"
-                                 Command="{Binding SendTypeChangedCommand}"
-                                 IsChecked="{Binding PlainTextSendTypeSelected, Mode=TwoWay}" />
+                                 Command="{Binding Send.TypeChangedCommand}"
+                                 IsChecked="{Binding Send.PlainTextSelected, Mode=TwoWay}" />
 
                     <RadioButton Content="Hex"
                                  Margin="0 0 10 0"
-                                 Command="{Binding SendTypeChangedCommand}"
-                                 IsChecked="{Binding HexSendTypeSelected, Mode=TwoWay}" />
+                                 Command="{Binding Send.TypeChangedCommand}"
+                                 IsChecked="{Binding Send.HexSelected, Mode=TwoWay}" />
+                    
+                    <RadioButton Content="File"
+                                 Margin="0 0 10 0"
+                                 Command="{Binding Send.TypeChangedCommand}"
+                                 IsChecked="{Binding Send.FileSelected, Mode=TwoWay}" />
                 </StackPanel>
                 
             </Grid>
